Checker Texture + RGB Curve generate too bright color #66165

Closed
opened 2019-06-27 05:33:03 +02:00 by Kinouti Takahiro · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: 67EF:CF ATI Technologies Inc. 4.5.13474 Core Profile Context 22.19.162.4

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-26 19:03, hash: 155c62b070

Short description of error
Checker Texture + RGB Curve generate too bright color. If you bake the diffuse color to a 32 bit float texture in Cycles, the baked texture have too bright value. Bloom effect in Eevee generates spark.
checker-rgb-curve-spark.gif

Exact steps for others to reproduce the error
Connect nodes as follow.

  1. Color1 in Checker Texture to White that have max value
  2. Color2 in Checker Texture to Blue that have max value
  3. Fac in RGB Curve to -0.6
  4. Set RGB Curve as following image
  5. Check Bloom in Eevee and rotate viewport
    checker-plus-rgb-curve.jpg
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: 67EF:CF ATI Technologies Inc. 4.5.13474 Core Profile Context 22.19.162.4 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-26 19:03, hash: `155c62b070` **Short description of error** Checker Texture + RGB Curve generate too bright color. If you bake the diffuse color to a 32 bit float texture in Cycles, the baked texture have too bright value. Bloom effect in Eevee generates spark. ![checker-rgb-curve-spark.gif](https://archive.blender.org/developer/F7551217/checker-rgb-curve-spark.gif) **Exact steps for others to reproduce the error** Connect nodes as follow. 1. Color1 in Checker Texture to White that have max value 2. Color2 in Checker Texture to Blue that have max value 3. Fac in RGB Curve to -0.6 4. Set RGB Curve as following image 5. Check Bloom in Eevee and rotate viewport ![checker-plus-rgb-curve.jpg](https://archive.blender.org/developer/F7551215/checker-plus-rgb-curve.jpg)

Added subscriber: @dskjal-1

Added subscriber: @dskjal-1

Added subscriber: @ixd

Added subscriber: @ixd

Looks like an output of RGB Curves explodes when input values are reaching 1.0.
image.png
Edit: Tested on this file:
rgb_curves_bug.blend

Looks like an output of RGB Curves explodes when input values are reaching 1.0. ![image.png](https://archive.blender.org/developer/F7551270/image.png) *Edit: Tested on this file:* [rgb_curves_bug.blend](https://archive.blender.org/developer/F7551339/rgb_curves_bug.blend)

I think it's RGB Curves extrapolation bug. Some observations:
image.png

GIF:
efawef4.gif

Changing extend type from Extrapolated to Horizontal fixes the output range.
image.png

I think it's RGB Curves extrapolation bug. Some observations: ![image.png](https://archive.blender.org/developer/F7551369/image.png) GIF: ![efawef4.gif](https://archive.blender.org/developer/F7551402/efawef4.gif) Changing *extend type* from Extrapolated to Horizontal fixes the output range. ![image.png](https://archive.blender.org/developer/F7551383/image.png)
Sebastian Parborg self-assigned this 2019-06-28 10:39:37 +02:00

I've posted a fix: D5151

I've posted a fix: [D5151](https://archive.blender.org/developer/D5151)

This issue was referenced by 5277557755

This issue was referenced by 5277557755eb32a527addbf47e09de3a781f96ed

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66165
No description provided.